# golibafl

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  shell.nix
.github/workflows/: rust.yml
harness_template/: README.md  go.mod  harness_fuzz.go
harness_wrappers/: harness_fuzz.go
harnesses/: README.md
harnesses/burntsushi-toml/: fuzz_campaign.sh  get_cov.sh  harness_fuzz.go  harness_test.go
harnesses/caddy/: get_cov.sh  go.mod
harnesses/path_constraint/: get_cov.sh  go.mod  harness_fuzz.go
harnesses/prometheus/: fuzz.sh  go.mod  go.sum  harness.go  harness_fuzz.go
harnesses/promql/: get_cov.sh
harnesses/trivial/: harness_test.go
native_fuzzers/go_fuzz/: README.md
native_fuzzers/native_fuzzing/caddy/: go.mod
native_fuzzers/native_fuzzing/trivial/: go.mod
native_fuzzers/native_go_fuzz_build/burntsushi-toml/: fuzz_campaign.sh  go.mod
native_fuzzers/native_go_fuzz_build/burntsushi-toml/test/: harness.go
native_fuzzers/native_go_fuzz_build/caddy/: fuzz.sh
native_fuzzers/native_go_fuzz_build/trivial/: fuzz.sh  go.mod
other_fuzzers/: README.md
other_fuzzers/go_fuzz_build/burntsushi-toml/: fuzz.sh
other_fuzzers/go_fuzz_build/caddy/: go.mod
other_fuzzers/go_fuzz_build/prometheus/: go.mod  go.sum
other_fuzzers/native_fuzzing/caddy/: fuzz.sh
other_fuzzers/native_fuzzing/prometheus/: go.mod
other_fuzzers/native_fuzzing/promql/: fuzz.sh
src/: main.rs
